--- a/data/settings.json
+++ b/data/settings.json
@@ -1,1 +1,1 @@
-{"token":"NTEwMTM1MTI1MjI1MzczNjk3.DuV7kg.QndLjRzIHndAC4gnOAPKSBR5R1s","client":"510135125225373697","tag":"h!","case":"true","separator":"\\s+","ownerId":"497380287085412353, 215184211114590229"}
+{"token":"Loser","client":"510135125225373697","tag":"h!","case":"true","separator":"\\s+","ownerId":"497380287085412353, 215184211114590229"}
